# TimeSeries-MiniProject

./: .gitignore  README.md  RoleCPD.py  notebook.ipynb  progress_notes.md  pyproject.toml  requirements.txt  soumission.ipynb
data/soccercpd/ugp/: 17985.csv
notebooks/: Experiments.ipynb  F_FCPD.ipynb  FormCPD.ipynb  Preprocessing.ipynb  RoleCPD.ipynb  notes.ipynb
notebooks/data/ugp/: Real_vs_Barcelona_Calma.ugp
notebooks/src/: FormCPD.py  Preprocessing.py  RoleCPD.py
presentation/: preamble.tex  presentation.bcf  presentation.nav  presentation.run.xml  presentation.tex  presentation.toc  presentation.vrb
presentation/sections/: 1. introduction.tex  2. contributions.tex  2. methodology.tex  3. data.tex  3. methodology.tex  4. data.tex  4. results.tex  5. conclusion.tex  5. results.tex  6. conclusion.tex  bibliography.tex
report/: bib.bib  main.tex  presentation.tex  report.run.xml  report.tex  report.xsim
report/sections/: 0_admin.tex  1. introduction.tex  1_introduction.tex  2. methodology.tex  2_methodology.tex  2a_formcpd.tex  2b_rolecpd.tex  3_data.tex  4. results.tex  4_results.tex  5.Annex.tex
results/: aggreemnt_df.csv  method_results.pkl  mu_global.npy  res_dict.pkl  res_dist.pkl  res_time.pkl  roles_global.npy
soccercpd/: pyproject.toml
soccercpd/src/soccercpd/: core.py  form_manager.py  myconstants.py  record_manager.py  rolerep.py
soccercpd/src/soccercpd.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/: FormCPD.py  RoleCPD.py  data.py  plots.py  soccercpd_exp_utils.py  utils.py
