[project]
name = "miniproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastparquet>=0.8.3",
    "matplotlib==3.4.2",
    "numpy==1.21.0",
    "pandas==1.3.4",
    "pygments<2.16",
    "rpy2==3.4.5",
    "ruptures>=1.1.9",
    "scikit-learn==0.24.2",
    "scipy==1.7.3",
    "seaborn==0.12.2",
    "soccercpd",
    "statsbombpy>=1.16.0",
    "sympy==1.9",
    "tqdm==4.61.1",
]

[tool.uv.workspace]
members = ["soccercpd"]

[tool.uv.sources]
soccercpd = { workspace = true }
